CB-27126: Refactor Group to use as builder